--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ footer a {
     background-position: center;
     position: relative;
 }
+
 .hero-form {
     background-color: #fce138;
     padding: 20px;
@@ -100,8 +101,7 @@ footer a {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
-}
-/* Hero Stle End*/
+}/* Hero Stle End*/
 section { 
     padding: 60px;
 }
