--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ footer a {
 }
 /* Hero Style Start*/
 .hero {
-    background-image: url("../images/hero-bg.jpg");
+    background-image: url("../images/hero-bg.jpeg");
     height: 600px;
     background-size: cover;
     background-position: center;
