--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,35 +121,31 @@ footer a {
     color: #fce138;
   }
 /* Hero Stle End*/
-.intro  {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
-}
-  
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+
+} 
 .primary-border {
     border-color: #fce138;
 }
-  
 .secondary-border {
     border-color: #39a6b2;
 }
 .steps {
-    text-align: center;
     background-color: #fce138;
 }
 .steps div {
@@ -172,7 +168,6 @@ footer a {
     font-size: 38px;
 }
 .trainers {
-    text-align: center;
 }
 .trainer {
     width: 900px;
@@ -203,14 +198,7 @@ footer a {
     font-size: 17px;
     line-height: 1.3;
 }
-.text-left {
-    text-align: left;
-}
-.text-right {
-    text-align: right;
-}
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -243,4 +231,13 @@ footer a {
 }
 section { 
     padding: 60px;
+}
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
+.flex-row {
+    display: flex;
 }
