--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,11 +133,10 @@ footer a {
     font-size: 55px;
     color: #024e76;
     border-bottom: 3px solid;
-    padding-bottom: 20px;
     text-align: center;
-    margin: 0 auto 35px auto;
     width: 50%;
-
+    padding-bottom: 20px;
+    margin: 0 auto 35px auto;
 } 
 .primary-border {
     border-color: #fce138;
@@ -145,27 +144,29 @@ footer a {
 .secondary-border {
     border-color: #39a6b2;
 }
-.steps {
+.step {
     background-color: #fce138;
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
-.steps div {
-    margin-bottom: 80px;
-}
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-.steps h3 {
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
 }
-.steps p {
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+}
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
-}
-.steps span {
-    font-size: 38px;
+    font-size: 18px;
 }
 .trainers {
 }
