--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,15 +12,24 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    background-image: url("../images/hero-bg.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a {
     text-decoration: none;
@@ -40,6 +49,13 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 footer {
     background-color: #fce138;
@@ -66,6 +82,8 @@ footer a {
     background-image: url("../images/hero-bg.jpeg");
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -73,14 +91,16 @@ footer a {
 }
 
 .hero-form {
-    background-color: #fce138;
+    background-color:rgba(252,225,56,.8);
     padding: 20px;
     color: #024e76;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
+    border-radius: 15px;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .hero-form h3 {
     font-size: 50px;
@@ -97,7 +117,14 @@ footer a {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
 }
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+}
+
 .hero-form label {
     margin: 0 5px;
 }
@@ -107,6 +134,10 @@ footer a {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+.hero-form button:hover {
+    background-color: #39a6b2;  
 }
 .hero-cta {
     width: 35%;
@@ -120,8 +151,10 @@ footer a {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 /* Hero Stle End*/
+
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -150,11 +183,13 @@ footer a {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
 }
 .step-info {
     display: flex;
@@ -261,6 +296,12 @@ footer a {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 .contact-form button {
     width: 100%;
@@ -270,6 +311,11 @@ footer a {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 section { 
     padding: 60px;
@@ -288,6 +334,7 @@ section {
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
     header {
+        position: relative;
         padding-bottom: 0;
         justify-content: center;
     }
@@ -304,7 +351,7 @@ section {
         font-size: 20px;
     }
     
-      footer h2, footer div {
+    footer h2, footer div {
         text-align: center;
         width: 100%;
     }
