--- a/assets/css/secondary-style.css
+++ b/assets/css/secondary-style.css
@@ -1,8 +1,13 @@
 .hero {
     background-position: bottom;
-    height: auto;
-    text-align: center;
-    margin-bottom: 40px;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 .page-title {
     color: #fce138;
